Changes to be committed:  made it such that adding a new route will remove the previous route (to prevent clutter)  set minimum zoom such that it will just encompass singapore at minimum

--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
     height: 100vh;
     width: 100%
 }
-/*
-#map-container {
+
+/* #map-container {
     position: relative;
-}
+} 
 
 #search-container {
     position: absolute;
@@ -35,6 +35,7 @@
 #icon-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
     gap: 15px
 
 }
@@ -43,8 +44,14 @@
     background-image: url("data/poster/football-field.jpg");
 }
 
-#instructions-text {
+/* #instructions-text {
     color: whitesmoke;
-    background-color: sandybrown;
-    opacity: 0.7
-}
+    background-color: rgb(98, 133, 94);
+    opacity: 0.8;
+    border-radius: 15px;
+    height: 11vh;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    
+} */
